[package]
name = "vncdisplay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "bmp", "ico", "webp"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["rt", "net", "macros", "io-util"] }
